--- a/packages/travel-project-frontend/src/components/Header/Header.module.css
+++ b/packages/travel-project-frontend/src/components/Header/Header.module.css
@@ -1,23 +1,23 @@
 .header {
-    padding: .2rem 0 .2rem 0;
-    display: grid;
-    grid-template-columns: 7fr 1fr 1fr 1fr;
-    grid-gap: 1rem;
+  padding: 0.2rem 0 0.2rem 0;
+  display: grid;
+  grid-template-columns: 7fr 1fr 1fr 1fr;
+  grid-gap: 1rem;
 }
 
 .header-button {
-    display: inline-block;
-    padding: .5rem .3rem;
-    background-color: #7139a8;
-    color: #fff;
-    border-radius: 1rem;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
+  display: inline-block;
+  padding: 0.5rem 0.3rem;
+  background-color: #203973;
+  color: #fff;
+  border-radius: 1rem;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 .header-button:hover {
-    background-color: #42215f; /* Change background color on hover */
+  background-color: #42215f; /* Change background color on hover */
 }
